--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
 		</dependency>
 	</dependencies>
 	<build>
-		<finalName>DropWizardExample-${version}</finalName>
+		<finalName>DropWizardExample-${project.version}</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
